5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1888_1649.log
== TEST (2019-07-09 16:12:41) 
-- CODE:
from numpy import*

cores = array(eval(input("cores dos olhos:")))
cores = cores.split(',')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:16:58) 
-- CODE:
from numpy import*

cores = array(eval(input("cores dos olhos:")))
cores = cores.split(',')

p = 0
c = 0 
m = 0
v = 0
a = 0

for i in range(size(cores)):
	if (cores[i] == "C"):
		c = c + 1
	elif (cores[i] == "P" ):
		p = p + 1
	elif (cores == "M"):
		m = m + 1
	elif (cores == "V"):
		v = v + 1
	elif (cores == "A"):
		a = a + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:20:03) 
-- CODE:
from numpy import*

cores = array(eval(input("cores dos olhos:")))
cores = cores.split(',')

p = 0
c = 0 
m = 0
v = 0
a = 0

for i in range(size(cores)):
	if (cores[i] == "P"):
		p = p + 1
	elif (cores[i] == "C" ):
		c = c + 1
	elif (cores == "M"):
		m = m + 1
	elif (cores == "V"):
		v = v + 1
	elif (cores == "A"):
		a = a + 1

clientes = zeros(5, dtype=int)

cliente[0] = p
cliente[1] = c
cliente[2] = m
cliente[3] = v
cliente[4] = a

print(max(cliente))
print(cliente)
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:20:45) 
-- CODE:
from numpy import*

cores = input("cores dos olhos:")))
cores = cores.split(',')

p = 0
c = 0 
m = 0
v = 0
a = 0

for i in range(size(cores)):
	if (cores[i] == "P"):
		p = p + 1
	elif (cores[i] == "C" ):
		c = c + 1
	elif (cores == "M"):
		m = m + 1
	elif (cores == "V"):
		v = v + 1
	elif (cores == "A"):
		a = a + 1

clientes = zeros(5, dtype=int)

cliente[0] = p
cliente[1] = c
cliente[2] = m
cliente[3] = v
cliente[4] = a

print(max(cliente))
print(cliente)
		
		
		
-- ERROR:
File "XXXX", line 3
    cores = input()))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:20:51) 
-- CODE:
from numpy import*

cores =input("cores dos olhos:")
cores = cores.split(',')

p = 0
c = 0 
m = 0
v = 0
a = 0

for i in range(size(cores)):
	if (cores[i] == "P"):
		p = p + 1
	elif (cores[i] == "C" ):
		c = c + 1
	elif (cores == "M"):
		m = m + 1
	elif (cores == "V"):
		v = v + 1
	elif (cores == "A"):
		a = a + 1

clientes = zeros(5, dtype=int)

cliente[0] = p
cliente[1] = c
cliente[2] = m
cliente[3] = v
cliente[4] = a

print(max(cliente))
print(cliente)
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:21:12) 
-- CODE:
from numpy import*

cores = input("cores dos olhos:")
cores = cores.split(',')

p = 0
c = 0 
m = 0
v = 0
a = 0

for i in range(size(cores)):
	if (cores[i] == "P"):
		p = p + 1
	elif (cores[i] == "C" ):
		c = c + 1
	elif (cores == "M"):
		m = m + 1
	elif (cores == "V"):
		v = v + 1
	elif (cores == "A"):
		a = a + 1

clientes = zeros(5, dtype=int)

cliente[0] = p
cliente[1] = c
cliente[2] = m
cliente[3] = v
cliente[4] = a

print(max(cliente))
print(cliente)
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:21:32) 
-- CODE:
from numpy import*

cores = input("cores dos olhos:")
cores = cores.split(',')

p = 0
c = 0 
m = 0
v = 0
a = 0

for i in range(size(cores)):
	if (cores[i] == "P"):
		p = p + 1
	elif (cores[i] == "C" ):
		c = c + 1
	elif (cores == "M"):
		m = m + 1
	elif (cores == "V"):
		v = v + 1
	elif (cores == "A"):
		a = a + 1

cliente = zeros(5, dtype=int)

cliente[0] = p
cliente[1] = c
cliente[2] = m
cliente[3] = v
cliente[4] = a

print(max(cliente))
print(cliente)
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:21:42) 
-- CODE:
from numpy import*

cores = input("cores dos olhos:")
cores = cores.split(',')

p = 0
c = 0 
m = 0
v = 0
a = 0

for i in range(size(cores)):
	if (cores[i] == "P"):
		p = p + 1
	elif (cores[i] == "C" ):
		c = c + 1
	elif (cores == "M"):
		m = m + 1
	elif (cores == "V"):
		v = v + 1
	elif (cores == "A"):
		a = a + 1

cliente = zeros(5, dtype=int)

cliente[0] = p
cliente[1] = c
cliente[2] = m
cliente[3] = v
cliente[4] = a

print(max(cliente))
print(cliente)
		
		
		
-- EXECUTION TIME:
0.859461
-- TEST CASE 1:
---- input:
A,V,V,V,C,A,C,P,P,A
---- correct output:
3
[2 2 0 3 3]
---- user output:
2
[2 2 0 0 0]
-- TEST CASE 2:
---- input:
A,V,V,P,C,A,C,P,P,M
---- correct output:
3
[3 2 1 2 2]
---- user output:
3
[3 2 0 0 0]
-- TEST CASE 3:
---- input:
M,M,M,M,C,C,C,A,A,A
---- correct output:
4
[0 3 4 0 3]
---- user output:
3
[0 3 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:21:48) 
-- CODE:
from numpy import*

cores = input("cores dos olhos:")
cores = cores.split(',')

p = 0
c = 0 
m = 0
v = 0
a = 0

for i in range(size(cores)):
	if (cores[i] == "P"):
		p = p + 1
	elif (cores[i] == "C" ):
		c = c + 1
	elif (cores == "M"):
		m = m + 1
	elif (cores == "V"):
		v = v + 1
	elif (cores == "A"):
		a = a + 1

cliente = zeros(5, dtype=int)

cliente[0] = p
cliente[1] = c
cliente[2] = m
cliente[3] = v
cliente[4] = a

print(max(cliente))
print(cliente)
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:24:51) 
-- CODE:
from numpy import*

cores = input("cores dos olhos:")
cores = cores.split(',')

p = 0
c = 0 
m = 0
v = 0
a = 0

for i in range(size(cores)):
	if (cores[i] == "P"):
		p = p + 1
	elif (cores[i] == "C" ):
		c = c + 1
	elif (cores == "M"):
		m = m + 1
	elif (cores == "V"):
		v = v + 1
	elif (cores == "A"):
		a = a + 1

cliente = zeros(5, dtype=int)

cliente[0] = p
cliente[1] = c
cliente[2] = m
cliente[3] = v
cliente[4] = a

print(max(cliente))*2
print(cliente)
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:24:59) 
-- CODE:
from numpy import*

cores = input("cores dos olhos:")
cores = cores.split(',')

p = 0
c = 0 
m = 0
v = 0
a = 0

for i in range(size(cores)):
	if (cores[i] == "P"):
		p = p + 1
	elif (cores[i] == "C" ):
		c = c + 1
	elif (cores == "M"):
		m = m + 1
	elif (cores == "V"):
		v = v + 1
	elif (cores == "A"):
		a = a + 1

cliente = zeros(5, dtype=int)

cliente[0] = p
cliente[1] = c
cliente[2] = m
cliente[3] = v
cliente[4] = a

print(max(cliente))
print(cliente)
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:26:38) 
-- CODE:
from numpy import*

cores = input("cores dos olhos:")
cores = cores.split(',')

p = 0
c = 0 
m = 0
v = 0
a = 0

for i in range(size(cores)):
	if (cores[i] == "P"):
		p = p + 1
	elif (cores[i] == "C" ):
		c = c + 1
	elif (cores == "M"):
		m = m + 1
	elif (cores == "V"):
		v = v + 1
	elif (cores == "A"):
		a = a + 1

cliente = zeros(5, dtype=int)

cliente[0] = p
cliente[1] = c
cliente[2] = m
cliente[3] = v
cliente[4] = a

print(max(cliente))
print(cliente)
		
		
		
-- EXECUTION TIME:
0.887816
-- TEST CASE 1:
---- input:
A,V,V,V,C,A,C,P,P,A
---- correct output:
3
[2 2 0 3 3]
---- user output:
2
[2 2 0 0 0]
-- TEST CASE 2:
---- input:
A,V,V,P,C,A,C,P,P,M
---- correct output:
3
[3 2 1 2 2]
---- user output:
3
[3 2 0 0 0]
-- TEST CASE 3:
---- input:
M,M,M,M,C,C,C,A,A,A
---- correct output:
4
[0 3 4 0 3]
---- user output:
3
[0 3 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:26:40) 
-- CODE:
from numpy import*

cores = input("cores dos olhos:")
cores = cores.split(',')

p = 0
c = 0 
m = 0
v = 0
a = 0

for i in range(size(cores)):
	if (cores[i] == "P"):
		p = p + 1
	elif (cores[i] == "C" ):
		c = c + 1
	elif (cores == "M"):
		m = m + 1
	elif (cores == "V"):
		v = v + 1
	elif (cores == "A"):
		a = a + 1

cliente = zeros(5, dtype=int)

cliente[0] = p
cliente[1] = c
cliente[2] = m
cliente[3] = v
cliente[4] = a

print(max(cliente))
print(cliente)
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:28:02) 
-- CODE:
from numpy import*

cores = input("cores dos olhos:")
cores = cores.split(',')

p = 0
c = 0 
m = 0
v = 0
a = 0

for i in range(size(cores)):
	if (cores[i] == "P"):
		p = p + 1
	elif (cores[i] == "C" ):
		c = c + 1
	elif (cores == "M"):
		m = m + 1
	elif (cores == "V"):
		v = v + 1
	elif (cores == "A"):
		a = a + 1

cliente = zeros(5, dtype=int)

cliente[0] = p
cliente[1] = c
cliente[2] = m
cliente[3] = v
cliente[4] = a

print(max(cliente))
print(cliente)
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:28:26) 
-- CODE:
from numpy import*

cores = input("cores dos olhos:")
cores = cores.split(',')

p = 0
c = 0 
m = 0
v = 0
a = 0

for i in range(size(cores)):
	if (cores[i] == "P"):
		p = p + 1
	elif (cores[i] == "C" ):
		c = c + 1
	elif (cores == "M"):
		m = m + 1
	elif (cores == "V"):
		v = v + 1
	elif (cores == "A"):
		a = a + 1

cliente = zeros(5, dtype=int)

cliente[0] = p
cliente[1] = c
cliente[2] = m
cliente[3] = v
cliente[4] = a

print(max(cliente))
print(cliente)
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:29:41) 
-- CODE:
from numpy import*

cores = input("cores dos olhos:")
cores = cores.split(',')

p = 0
c = 0 
m = 0
v = 0
a = 0

for i in range(size(cores)):
	if (cores[i] == "P"):
		p = p + 1
	elif (cores[i] == "C" ):
		c = c + 1
	elif (cores[i] == "M"):
		m = m + 1
	elif (cores[i] == "V"):
		v = v + 1
	elif (cores[i] == "A"):
		a = a + 1

cliente = zeros(5, dtype=int)

cliente[0] = p
cliente[1] = c
cliente[2] = m
cliente[3] = v
cliente[4] = a

print(max(cliente))
print(cliente)
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:29:55) 
-- CODE:
from numpy import*

cores = input("cores dos olhos:")
cores = cores.split(',')

p = 0
c = 0 
m = 0
v = 0
a = 0

for i in range(size(cores)):
	if (cores[i] == "P"):
		p = p + 1
	elif (cores[i] == "C" ):
		c = c + 1
	elif (cores[i] == "M"):
		m = m + 1
	elif (cores[i] == "V"):
		v = v + 1
	elif (cores[i] == "A"):
		a = a + 1

cliente = zeros(5, dtype=int)

cliente[0] = p
cliente[1] = c
cliente[2] = m
cliente[3] = v
cliente[4] = a

print(max(cliente))
print(cliente)
		
		
		
-- EXECUTION TIME:
0.900303
-- TEST CASE 1:
---- input:
A,V,V,V,C,A,C,P,P,A
---- correct output:
3
[2 2 0 3 3]
---- user output:
3
[2 2 0 3 3]
-- TEST CASE 2:
---- input:
A,V,V,P,C,A,C,P,P,M
---- correct output:
3
[3 2 1 2 2]
---- user output:
3
[3 2 1 2 2]
-- TEST CASE 3:
---- input:
M,M,M,M,C,C,C,A,A,A
---- correct output:
4
[0 3 4 0 3]
---- user output:
4
[0 3 4 0 3]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
